--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
     "@nuxtjs/google-fonts": "3.2.0",
-    "nuxt": "^3.13.2",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-fs": "~2",
+    "date-fns": "^4.1.0",
+    "nuxt": "^3.14.0",
+    "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-router": "latest"
   },
