--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,5 @@ log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-fs = "2"
+tauri-plugin-dialog = "2.0.0-beta"
+tauri-plugin-sql = "2"
