nice database and search

--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-sql": "~2",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/integrations": "^12.7.0",
+    "@vueuse/nuxt": "12.7.0",
     "date-fns": "^4.1.0",
+    "fuse.js": "^7",
     "nuxt": "^3.14.0",
     "v-calendar": "^3.1.2",
     "vue": "latest",
