--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
     "@nuxtjs/google-fonts": "3.2.0",
+    "@pinia/nuxt": "^0.10.1",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-sql": "~2",
+    "@tauri-apps/plugin-store": "~2",
     "@vueuse/core": "^12.7.0",
     "@vueuse/integrations": "^12.7.0",
     "@vueuse/nuxt": "12.7.0",
     "date-fns": "^4.1.0",
     "fuse.js": "^7",
     "nuxt": "^3.14.0",
+    "pinia": "^3.0.1",
     "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-router": "latest"
