--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,4 @@ tauri-plugin-fs = "2"
 tauri-plugin-dialog = "2.0.0-beta"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tauri-plugin-shell = "2"
+tauri-plugin-store = "2"
